Fixed horizontal scrolling on difficulty select

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -2263,11 +2263,3 @@ body.titleScreen {
   box-shadow: none;
   transform: none;
 }
-
-#section2 .menu-container {
-  width: 100%;
-  padding-left: 0;
-  padding-right: 0;
-  left: 0;
-  transform: translateY(-50%);
-}
